--- a/grid.html
+++ b/grid.html
@@ -26,6 +26,18 @@
                 <div class="text-light bg-secondary p-3">Col 4</div>
             </div>
         </div>
+        <!-- my own -->
+        <div class="row my-3">
+            <div class="col-sm-4 col-lg-6">
+                <div class="p-3 bg-info text-light">col1</div>
+            </div>
+            <div class="col-sm-4 col-lg-3">
+                <div class="p-3 bg-info text-light">col2</div>
+            </div>
+            <div class="col-sm-4 col-lg-3">
+                <div class="p-3 bg-info text-light">col3</div>
+            </div>
+        </div>
     </div>
     </div>
     <div class="container-lg my-4">
