--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Bootstrap</title>
     <style>
         section {
@@ -22,6 +23,7 @@
             <!-- navbar brand / title -->
             <a class="navbar-brand" href="#intro">
                 <span class="text-secondary fw-bold">
+                    <i class="bi bi-book-half"></i>
                     Net Ninja Pro - the Book
                 </span>
             </a>
@@ -138,6 +140,7 @@
                 <div class="col-6 col-lg-4">
                     <img class="img-fluid" src="./assets//kindle.png" alt="ebook">
                 </div>
+                <!-- accordions -->
                 <div class="col-lg-6">
                     <div class="accordion" id="chapters">
                         <div class="accordion-item">
@@ -262,6 +265,74 @@
         </div>
     </section>
 
+
+    <!-- Reviews List -->
+    <section id="reviews" class="bg-light">
+        <div class="container-lg">
+            <div class="text-center">
+                <h2><i class="bi bi-stars"></i>Book Reviews</h2>
+                <p class="lead">What my students have said about the book...</p>
+            </div>
+            <div class="row justify-content-center my-5">
+                <div class="col-lg-8">
+                    <div class="list-group">
+                        <div class="list-group-item py-3">
+                            <div class="pb-2">
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                            </div>
+                            <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                            <p class="mb-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias rem quis
+                                similique tenetur recusandae accusamus accusantium cupiditate sint minima incidunt.</p>
+                            <small>Review by Mario</small>
+                        </div>
+                        <div class="list-group-item py-3 ">
+                            <div class="pb-2">
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-half  text-primary"></i>
+
+                            </div>
+                            <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                            <p class="mb-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias rem quis
+                                similique tenetur recusandae accusamus accusantium cupiditate sint minima incidunt.</p>
+                            <small>Review by Mario</small>
+                        </div>
+                        <div class="list-group-item py-3">
+                            <div class="pb-2">
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-half text-primary"></i>
+                            </div>
+                            <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                            <p class="mb-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias rem quis
+                                similique tenetur recusandae accusamus accusantium cupiditate sint minima incidunt.</p>
+                            <small>Review by Mario</small>
+                        </div>
+                        <div class="list-group-item py-3">
+                            <div class="pb-2">
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                                <i class="bi bi-star-fill text-primary"></i>
+                            </div>
+                            <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                            <p class="mb-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias rem quis
+                                similique tenetur recusandae accusamus accusantium cupiditate sint minima incidunt.</p>
+                            <small>Review by Mario</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
