--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
                     <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
                 </div>
                 <div class="col-md-5 text-center d-none d-md-block">
-                    <img class="img-fluid" src="/assets/ebook-cover.png" alt="ebook cover">
+                    <span class="tt" data-bs-placement="bottom" title="Net Ninja Book Cover">
+                        <img class="img-fluid" src="/assets/ebook-cover.png" alt="ebook cover">
+                    </span>
                 </div>
             </div>
         </div>
@@ -350,6 +352,12 @@
                             <span class="input-group-text">
                                 <i class="bi bi-envelope-fill"></i> </span>
                             <input type="email" class="form-control" id="email" placeholder="e.g sostene@example.com">
+                            <!-- ToolTip -->
+                            <span class="input-group-text">
+                                <span class="tt" data-bs-placement="bottom"
+                                    title="Enter an Email address we can reply to.">
+                                    <i class="bi bi-question-circle text-muted"></i> </span>
+                            </span>
                         </div>
                         <label for="name" class="form-label">Name:</label>
                         <div class="mb-4 input-group">
@@ -357,6 +365,11 @@
                                 <i class="bi bi-person-fill"></i>
                             </span>
                             <input type="text" class="form-control" id="name" placeholder="e.g Sostene">
+                            <!-- ToolTip -->
+                            <span class="input-group-text">
+                                <span class="tt" data-bs-placement="bottom" title="Pretty self explanatory really..">
+                                    <i class="bi bi-question-circle text-muted"></i> </span>
+                            </span>
                         </div>
                         <label for="subject" class="form-label">What is your Question about?</label>
                         <div class="mb-4 input-group">
@@ -388,6 +401,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script>
+        const toolTips = document.querySelectorAll('.tt');
+        toolTips.forEach(t => {
+            new bootstrap.Tooltip(t);
+        });
+    </script>
 </body>
 
 </html>
