--- a/index.html
+++ b/index.html
@@ -396,6 +396,49 @@
         </div>
     </section>
 
+    <!-- Modals -->
+    <!-- getting updates/Trigger modal -->
+    <section class="bg-light">
+        <div class="container">
+            <div class="text-center">
+                <h2>Stay in the Loop</h2>
+                <p class="lead">Get the Latest updates as they happen...</p>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-8 text-center">
+                    <p class="text-muted my-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam
+                        cupiditate nisi ducimus accusamus impedit quia sed quod temporibus aliquid, ipsa facere
+                        quibusdam libero fugiat iste. Velit beatae omnis ad deleniti?</p>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reg-modal">Register for
+                        Updates</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- Modal itself -->
+    <div class="modal fade" id="reg-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modal-title">Get the Latest Updates</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus repellendus officiis sunt,
+                        rem architecto ipsa.</p>
+                    <label for="modal-email" class="form-label">Your Email address:</label>
+                    <input type="email" class="form-control" id="modal-email" placeholder="e.g. sostene@example.com">
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
