--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <title>Bootstrap</title>
+    <link rel="icon" href="./assets/book.svg">
+    <title>E || Books</title>
     <style>
         section {
             padding: 60px 0;
@@ -68,6 +69,9 @@
                     </h1>
                     <p class="lead my-4 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
+                    <!-- open sidebar /offcanvas -->
+                    <a href="#sidebar" class="d-block mt-3" data-bs-toggle="offcanvas" role="button"
+                        aria-controls="sidebar">Explore my other books</a>
                 </div>
                 <div class="col-md-5 text-center d-none d-md-block">
                     <span class="tt" data-bs-placement="bottom" title="Net Ninja Book Cover">
@@ -409,6 +413,7 @@
                     <p class="text-muted my-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam
                         cupiditate nisi ducimus accusamus impedit quia sed quod temporibus aliquid, ipsa facere
                         quibusdam libero fugiat iste. Velit beatae omnis ad deleniti?</p>
+                    <!-- triggering the modal -->
                     <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reg-modal">Register for
                         Updates</button>
                 </div>
@@ -440,6 +445,17 @@
     </div>
 
 
+    <!-- offcanvas -->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebar" aria-labelledby="sidebar-label">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="sidebar-label">My Other Books</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quaerat minima ea dolores molestias. Nihil
+                quo distinctio tempora est optio?</p>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
