adding the dropdowns, specifically on the canvas section

--- a/index.html
+++ b/index.html
@@ -452,8 +452,19 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="close"></button>
         </div>
         <div class="offcanvas-body">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quaerat minima ea dolores molestias. Nihil
-                quo distinctio tempora est optio?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quibusdam, sed porro itaque iure
+                quisquam ab facilis adipisci. Commodi pariatur eos reprehenderit explicabo ratione delectus. Neque nobis
+                magni repellat suscipit!</p>
+            <!-- Dropdown -->
+            <div class="dropdown mt-3">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    id="book-dropdown">Choose a book title</button>
+                <ul class="dropdown-menu" aria-labelledby="book-dropdown">
+                    <li><a href="#" class="dropdown-item">Become a React superhero</a></li>
+                    <li><a href="#" class="dropdown-item">Conquering Vue.js</a></li>
+                    <li><a href="#" class="dropdown-item">Levelling up your Next.js</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
